opam-version: "2.0"
name: "fuzzql"
version: "0.1"
synopsis: "A GraphQL Fuzzy Testing Server"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/fuzzql"
bug-reports: "https//github.com/ostera/fuzzql/issues"
depends: [
  "fmt"
  
  "httpaf"
  "httpaf-lwt"
  "logs"
  "lwt"

  "graphql"
  "graphql-lwt"

  "qcheck"

  "dune" {build}
  "reason" {build}
]
build: [make "build"]
install: [make "install"]
